Explicit concurrent GC should do traversal when Traversal GC is enabled